# SAM-Tracker

./: LICENSE  README.md  pyproject.toml
src/tracker/: app.py  errors.py
src/tracker/analysis/: contours.py
src/tracker/config/: settings.py
src/tracker/gui/: main_window.py
src/tracker/gui/controllers/: annotation.py  batch.py
src/tracker/gui/widgets/: file_browser.py  image_viewer.py
src/tracker/io/: exporters.py  overlay.py  video_writer.py
src/tracker/pipeline/: memory.py  orchestrator.py  runner.py  video_io.py
src/tracker/tracking/: base.py  factory.py  fake.py  precision.py  sam2.py  sam3.py
